# hoopie-infra

./: .env.dev  .env.prod  .env.stag  .gitignore  CLAUDE.md  deploy.sh  main.py  pyproject.toml
backend/end-points/: .env.example  Dockerfile  README.md  agent_call.py  pyproject.toml  requirements.txt  setup.sh  streaming_agent.py  test_streaming_client.py
backend/end-points/security/: __init__.py  ui_firebase.py
backend/mcp-servers/servicenow-mcp/: .env.dev  .env.prod  .env.stag  .gcloudignore  DEPLOYMENT.md  Dockerfile  README.md  cloudbuild.yaml  deploy-advanced.sh  deploy.sh  list_tools.py  quick-deploy.sh  test_mcp_server.py  tools_list.json
backend/mcp-servers/servicenow-mcp/config/: tool_packages.yaml
backend/mcp-servers/servicenow-mcp/docs/: AGENT_INCIDENT_GUIDELINES.md  INCIDENT_MANAGEMENT_GUIDE.md
backend/scripts/: debug_user.py  manage_firebase_user.py  pyproject.toml  test_user_creation.py
deploy/: cloudbuild-api-endpoints.yaml  cloudbuild-hoopie-sdm.yaml  cloudbuild-infra.yaml  cloudbuild-servicenow-mcp.yaml
deploy/scripts/: create-terraform-sa.sh  deploy-agent.sh  deploy-cloudbuild.sh  fix-terraform-sa-permissions.sh  setup-web-secrets.sh  test_api_endpoints_ignore.sh  test_hoopie_sdm_ignore.sh  test_servicenow_ignore.sh  update-cloudrun-secrets.sh
deploy/terraform/: main.tf  variables.tf
deploy/terraform/cloud-run/: main.tf  outputs.tf  variables.tf
deploy/terraform/environments/dev/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
deploy/terraform/environments/prod/: .terraform.lock.hcl  main.tf  variables.tf
(+58 files in other folders)
